# climatetimer

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
climatetimer/: climatetimer.py
examples/: climatetimer_search_benchmark.ipynb
tests/: test_climatetimer.py
